--- a/RacingGame/Player/pom.xml
+++ b/RacingGame/Player/pom.xml
@@ -8,16 +8,13 @@
     </parent>
 
     <properties>
-        <bundle.symbolicName>racing.core</bundle.symbolicName>
+        <bundle.symbolicName>racing.player</bundle.symbolicName>
         <bundle.namespace>racing</bundle.namespace>
     </properties>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>Core</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>Player</artifactId>
     <packaging>bundle</packaging>
-
-    <name>Core</name>
+    <name>Player</name>
     <dependencies>
         <dependency>
             <groupId>org.osgi</groupId>
@@ -32,16 +29,6 @@
         <dependency>
             <groupId>racing.build</groupId>
             <artifactId>Common</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>OSGiLibGDX</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>CommonMap</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
