--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -23,6 +23,7 @@
     <module>Core</module>
     <module>Common</module>
     <module>OSGiLibGDX</module>
+    <module>Player</module>
     <module>CommonMap</module>
     <module>Map</module>
   </modules>
@@ -44,5 +45,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
