Added A-Star implementation from GitHub @Marcelo Surriabre

--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -25,6 +25,7 @@
     <module>OSGiLibGDX</module>
     <module>CommonMap</module>
     <module>Map</module>
+    <module>NPC</module>
   </modules>
 
   <build>
