--- a/RacingGame/NPC/pom.xml
+++ b/RacingGame/NPC/pom.xml
@@ -31,5 +31,10 @@
             <artifactId>Common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>CommonNPC</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
