--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>racing</groupId>
   <artifactId>RacingGame</artifactId>
@@ -25,6 +25,7 @@
     <module>OSGiLibGDX</module>
     <module>CommonMap</module>
     <module>Map</module>
+    <module>Item</module>
   </modules>
 
   <build>
