--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -28,6 +28,7 @@
     <module>Map</module>
     <module>NPC</module>
     <module>CommonNPC</module>
+    <module>GUI</module>
   </modules>
 
   <build>
