--- a/RacingGame/GUI/pom.xml
+++ b/RacingGame/GUI/pom.xml
@@ -33,5 +33,17 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>OSGiLibGDX</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>com.badlogicgames.gdx</groupId>
+            <artifactId>gdx-backend-lwjgl</artifactId>
+            <version>1.9.6</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
