Created AI and CommonAI bundles, with basic setup

--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -28,6 +28,8 @@
     <module>Map</module>
     <module>NPC</module>
     <module>CommonNPC</module>
+    <module>AI</module>
+    <module>CommonAI</module>
   </modules>
 
   <build>
