--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -29,6 +29,7 @@
     <module>NPC</module>
     <module>CommonNPC</module>
     <module>GUI</module>
+    <module>CommonPlayer</module>
   </modules>
 
   <build>
