All code up until weird out of bounds exception

--- a/RacingGame/CommonAI/pom.xml
+++ b/RacingGame/CommonAI/pom.xml
@@ -20,6 +20,12 @@
   <name>CommonAI</name>
 
   <packaging>bundle</packaging>
-
-
+    <dependencies>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+    </dependencies>
 </project>
