--- a/RacingGame/LabSystem/pom.xml
+++ b/RacingGame/LabSystem/pom.xml
@@ -9,15 +9,15 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>racing.labsystem</bundle.symbolicName>
+    <bundle.symbolicName>racing.lapsystem</bundle.symbolicName>
     <bundle.namespace>racing</bundle.namespace>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>LabSystem</artifactId>
+  <artifactId>LapSystem</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>LabSystem</name>
+  <name>LapSystem</name>
 
   <packaging>bundle</packaging>
 
