--- a/RacingGame/CommonItem/pom.xml
+++ b/RacingGame/CommonItem/pom.xml
@@ -7,12 +7,12 @@
     <version>1.0-SNAPSHOT</version>
   </parent>
 
-    <groupId>racing</groupId>
-    <artifactId>Item</artifactId>
+    <groupId>racing.build</groupId>
+    <artifactId>CommonItem</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>bundle</packaging>
 
-    <name>Item</name>
+    <name>CommonItem</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,6 +24,12 @@
             <artifactId>org.osgi.core</artifactId>
             <version>4.3.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
     </dependencies>
 
