--- a/RacingGame/GUI/pom.xml
+++ b/RacingGame/GUI/pom.xml
@@ -51,5 +51,17 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonNPC</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonAI</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
