--- a/RacingGame/NPC/pom.xml
+++ b/RacingGame/NPC/pom.xml
@@ -32,13 +32,14 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>CommonNPC</artifactId>
-            <version>${project.version}</version>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonMap</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
         </dependency>
         <dependency>
             <groupId>racing.build</groupId>
-            <artifactId>CommonMap</artifactId>
+            <artifactId>CommonNPC</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
