--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -31,6 +31,7 @@
     <module>GUI</module>
     <module>CommonPlayer</module>
     <module>LabSystem</module>
+    <module>SpawnSystem</module>
   </modules>
 
   <build>
