--- a/RacingGame/Common/pom.xml
+++ b/RacingGame/Common/pom.xml
@@ -26,5 +26,17 @@
             <artifactId>org.osgi.compendium</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonPlayer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonItem</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
