--- a/RacingGame/racing.build_Bullet_bundle_1.0-SNAPSHOT/pom.xml
+++ b/RacingGame/racing.build_Bullet_bundle_1.0-SNAPSHOT/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>racing.map</bundle.symbolicName>
+    <bundle.symbolicName>racing.item</bundle.symbolicName>
     <bundle.namespace>racing</bundle.namespace>
   </properties>
 
