--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -34,8 +34,8 @@
     <module>LabSystem</module>
     <module>PenaltySystem</module>
     <module>SpawnSystem</module>
-    <module>racing.build_Bullet_bundle_1.0-SNAPSHOT</module>
     <module>CommonItem</module>
+    <module>Bullet</module>
   </modules>
 
   <build>
