--- a/RacingGame/Bullet/pom.xml
+++ b/RacingGame/Bullet/pom.xml
@@ -45,6 +45,11 @@
       <version>1.0-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>CommonPlayer</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
