--- a/RacingGame/CommonItem/pom.xml
+++ b/RacingGame/CommonItem/pom.xml
@@ -9,7 +9,7 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>racing.common</bundle.symbolicName>
+    <bundle.symbolicName>racing.bullet</bundle.symbolicName>
     <bundle.namespace>racing</bundle.namespace>
   </properties>
 
