--- a/RacingGame/Collision/pom.xml
+++ b/RacingGame/Collision/pom.xml
@@ -55,5 +55,11 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>racing.build</groupId>
+            <artifactId>CommonItem</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
 </project>
