--- a/RacingGame/NPC/bin/pom.xml
+++ b/RacingGame/NPC/bin/pom.xml
@@ -32,14 +32,13 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>racing.build</groupId>
-            <artifactId>CommonMap</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <type>jar</type>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>CommonNPC</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>racing.build</groupId>
-            <artifactId>CommonNPC</artifactId>
+            <artifactId>CommonMap</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
