--- a/RacingGame/ItemSystem/pom.xml
+++ b/RacingGame/ItemSystem/pom.xml
@@ -46,6 +46,12 @@
       <version>1.0-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
+    <dependency>
+      <groupId>racing.build</groupId>
+      <artifactId>Core</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
