--- a/RacingGame/LabSystem/pom.xml
+++ b/RacingGame/LabSystem/pom.xml
@@ -27,6 +27,19 @@
       <artifactId>CommonMap</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+    <groupId>junit</groupId>
+    <artifactId>junit</artifactId>
+    <version>4.12</version>
+    <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>racing.build</groupId>
+      <artifactId>CommonNPC</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
