--- a/RacingGame/LabSystem/pom.xml
+++ b/RacingGame/LabSystem/pom.xml
@@ -40,6 +40,19 @@
       <scope>test</scope>
       <type>jar</type>
     </dependency>
+    <dependency>
+    <groupId>org.mockito</groupId>
+    <artifactId>mockito-all</artifactId>
+    <version>1.10.19</version>
+    <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>racing.build</groupId>
+      <artifactId>Map</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+      <type>jar</type>
+    </dependency>
   </dependencies>
 
 </project>
