--- a/RacingGame/pom.xml
+++ b/RacingGame/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>RacingGame</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>RacingGame</name>
+  <name>WoadWacing</name>
   <description>Generated using Pax-Construct</description>
 
   <properties>
